--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -174,18 +174,86 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CustomersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\MoviesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201902180723061_InitialModel.cs" />
+    <Compile Include="Migrations\201902180723061_InitialModel.Designer.cs">
+      <DependentUpon>201902180723061_InitialModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201902191455429_AddNewsletterSubscription.cs" />
+    <Compile Include="Migrations\201902191455429_AddNewsletterSubscription.Designer.cs">
+      <DependentUpon>201902191455429_AddNewsletterSubscription.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201902191503212_AddMembershipType.cs" />
+    <Compile Include="Migrations\201902191503212_AddMembershipType.Designer.cs">
+      <DependentUpon>201902191503212_AddMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201902191506181_PopulateMembershipTypes.cs" />
+    <Compile Include="Migrations\201902191506181_PopulateMembershipTypes.Designer.cs">
+      <DependentUpon>201902191506181_PopulateMembershipTypes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201902191522582_AddAnnotationsToCustomerName.cs" />
+    <Compile Include="Migrations\201902191522582_AddAnnotationsToCustomerName.Designer.cs">
+      <DependentUpon>201902191522582_AddAnnotationsToCustomerName.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201903020956492_AddNamePropertyToMembershipType.cs" />
+    <Compile Include="Migrations\201903020956492_AddNamePropertyToMembershipType.Designer.cs">
+      <DependentUpon>201903020956492_AddNamePropertyToMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201903021002299_ChangedNameTypeInMembershipType.cs" />
+    <Compile Include="Migrations\201903021002299_ChangedNameTypeInMembershipType.Designer.cs">
+      <DependentUpon>201903021002299_ChangedNameTypeInMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201903021004249_UpdateNameRecordsMembershipType.cs" />
+    <Compile Include="Migrations\201903021004249_UpdateNameRecordsMembershipType.Designer.cs">
+      <DependentUpon>201903021004249_UpdateNameRecordsMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201903021023189_AddCustomerBirthDate.cs" />
+    <Compile Include="Migrations\201903021023189_AddCustomerBirthDate.Designer.cs">
+      <DependentUpon>201903021023189_AddCustomerBirthDate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201903021046201_AddMorePropertiesToMovieModel.cs" />
+    <Compile Include="Migrations\201903021046201_AddMorePropertiesToMovieModel.Designer.cs">
+      <DependentUpon>201903021046201_AddMorePropertiesToMovieModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201903021052582_ChangedGenrePropertyInMovie.cs" />
+    <Compile Include="Migrations\201903021052582_ChangedGenrePropertyInMovie.Designer.cs">
+      <DependentUpon>201903021052582_ChangedGenrePropertyInMovie.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201903021054513_PopulateGenres.cs" />
+    <Compile Include="Migrations\201903021054513_PopulateGenres.Designer.cs">
+      <DependentUpon>201903021054513_PopulateGenres.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201903021121530_FixedMovieGenreRelation.cs" />
+    <Compile Include="Migrations\201903021121530_FixedMovieGenreRelation.Designer.cs">
+      <DependentUpon>201903021121530_FixedMovieGenreRelation.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MembershipType.cs" />
+    <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resources\CustomerResources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>CustomerResources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Startup.cs" />
+    <Compile Include="View_Models\CustomerFormViewModel.cs" />
+    <Compile Include="View_Models\MovieFormViewModel.cs" />
+    <Compile Include="View_Models\RandomMovieViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap-flatly.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -241,6 +309,14 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Movies\Random.cshtml" />
+    <Content Include="Views\Shared\_Navbar.cshtml" />
+    <Content Include="Views\Customers\Index.cshtml" />
+    <Content Include="Views\Customers\Details.cshtml" />
+    <Content Include="Views\Movies\Index.cshtml" />
+    <Content Include="Views\Movies\Details.cshtml" />
+    <Content Include="Views\Customers\CustomerForm.cshtml" />
+    <Content Include="Views\Movies\MovieForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -257,6 +333,51 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201902180723061_InitialModel.resx">
+      <DependentUpon>201902180723061_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201902191455429_AddNewsletterSubscription.resx">
+      <DependentUpon>201902191455429_AddNewsletterSubscription.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201902191503212_AddMembershipType.resx">
+      <DependentUpon>201902191503212_AddMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201902191506181_PopulateMembershipTypes.resx">
+      <DependentUpon>201902191506181_PopulateMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201902191522582_AddAnnotationsToCustomerName.resx">
+      <DependentUpon>201902191522582_AddAnnotationsToCustomerName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201903020956492_AddNamePropertyToMembershipType.resx">
+      <DependentUpon>201903020956492_AddNamePropertyToMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201903021002299_ChangedNameTypeInMembershipType.resx">
+      <DependentUpon>201903021002299_ChangedNameTypeInMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201903021004249_UpdateNameRecordsMembershipType.resx">
+      <DependentUpon>201903021004249_UpdateNameRecordsMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201903021023189_AddCustomerBirthDate.resx">
+      <DependentUpon>201903021023189_AddCustomerBirthDate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201903021046201_AddMorePropertiesToMovieModel.resx">
+      <DependentUpon>201903021046201_AddMorePropertiesToMovieModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201903021052582_ChangedGenrePropertyInMovie.resx">
+      <DependentUpon>201903021052582_ChangedGenrePropertyInMovie.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201903021054513_PopulateGenres.resx">
+      <DependentUpon>201903021054513_PopulateGenres.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201903021121530_FixedMovieGenreRelation.resx">
+      <DependentUpon>201903021121530_FixedMovieGenreRelation.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\CustomerResources.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>CustomerResources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
